[workspace]
members = [ "crates/cache_system", "crates/car_rental", "crates/fitness", "crates/homekart", "crates/limiter", "crates/logger", "crates/meet_scheduler", "crates/movie_book", "crates/musicx", "crates/newsfeed","crates/pubsub", "crates/snake_ladder", "crates/spliter", "crates/walletx"]
resolver = "2"
